--- a/templates/jobservice/jobservice-pvc.yaml
+++ b/templates/jobservice/jobservice-pvc.yaml
@@ -1,5 +1,5 @@
 {{- $jobservice := .Values.persistence.persistentVolumeClaim.jobservice -}}
-{{- if and .Values.persistence.enabled (not $jobservice.existingClaim) (has "file" .Values.jobservice.jobLoggers) }}
+{{- if and .Values.persistence.enabled (not $jobservice.existingClaim) }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
