feat: update tag to v2.8.0-test for harbor oss v2.8.0 fc testing
Signed-off-by: Shengwen Yu <yshengwen@vmware.com>

--- a/values.yaml
+++ b/values.yaml
@@ -400,7 +400,7 @@ enableMigrateHelmHook: false
 nginx:
   image:
     repository: goharbor/nginx-photon
-    tag: dev
+    tag: v2.8.0-test
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -422,7 +422,7 @@ nginx:
 portal:
   image:
     repository: goharbor/harbor-portal
-    tag: dev
+    tag: v2.8.0-test
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -444,7 +444,7 @@ portal:
 core:
   image:
     repository: goharbor/harbor-core
-    tag: dev
+    tag: v2.8.0-test
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -497,7 +497,7 @@ core:
 jobservice:
   image:
     repository: goharbor/harbor-jobservice
-    tag: dev
+    tag: v2.8.0-test
   replicas: 1
   revisionHistoryLimit: 10
   # set the service account to be used, default if left empty
@@ -540,7 +540,7 @@ registry:
   registry:
     image:
       repository: goharbor/registry-photon
-      tag: dev
+      tag: v2.8.0-test
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -548,7 +548,7 @@ registry:
   controller:
     image:
       repository: goharbor/harbor-registryctl
-      tag: dev
+      tag: v2.8.0-test
 
     # resources:
     #  requests:
@@ -605,7 +605,7 @@ trivy:
     # repository the repository for Trivy adapter image
     repository: goharbor/trivy-adapter-photon
     # tag the tag for Trivy adapter image
-    tag: dev
+    tag: v2.8.0-test
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -680,7 +680,7 @@ notary:
     automountServiceAccountToken: false
     image:
       repository: goharbor/notary-server-photon
-      tag: dev
+      tag: v2.8.0-test
     replicas: 1
     # resources:
     #  requests:
@@ -702,7 +702,7 @@ notary:
     automountServiceAccountToken: false
     image:
       repository: goharbor/notary-signer-photon
-      tag: dev
+      tag: v2.8.0-test
     replicas: 1
     # resources:
     #  requests:
@@ -734,7 +734,7 @@ database:
     automountServiceAccountToken: false
     image:
       repository: goharbor/harbor-db
-      tag: dev
+      tag: v2.8.0-test
     # The initial superuser password for internal database
     password: "changeit"
     # The size limit for Shared memory, pgSQL use it for shared_buffer
@@ -806,7 +806,7 @@ redis:
     automountServiceAccountToken: false
     image:
       repository: goharbor/redis-photon
-      tag: dev
+      tag: v2.8.0-test
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -850,7 +850,7 @@ exporter:
   automountServiceAccountToken: false
   image:
     repository: goharbor/harbor-exporter
-    tag: dev
+    tag: v2.8.0-test
   nodeSelector: {}
   tolerations: []
   affinity: {}
