--- a/values.yaml
+++ b/values.yaml
@@ -830,8 +830,8 @@ redis:
     registryDatabaseIndex: "2"
     trivyAdapterIndex: "5"
     # username field can be an empty string and it will be authenticated against the default user
-    username: ""
-    password: "foobar"
+    username: "virginia"
+    password: "mypassword"
     # If using existingSecret, the key must be REDIS_PASSWORD
     existingSecret: ""
   ## Additional deployment annotations
