feat: repository & tag for oss 2.9.0 fc testing day
Signed-off-by: Shengwen Yu <yshengwen@vmware.com>

--- a/values.yaml
+++ b/values.yaml
@@ -377,8 +377,8 @@ enableMigrateHelmHook: false
 # If service exposed via "ingress", the Nginx will not be used
 nginx:
   image:
-    repository: goharbor/nginx-photon
-    tag: dev
+    repository: yangjiao0817/nginx-photon
+    tag: v2.9.0-build.2141
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -408,8 +408,8 @@ nginx:
 
 portal:
   image:
-    repository: goharbor/harbor-portal
-    tag: dev
+    repository: yangjiao0817/harbor-portal
+    tag: v2.9.0-build.2141
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -439,8 +439,8 @@ portal:
 
 core:
   image:
-    repository: goharbor/harbor-core
-    tag: dev
+    repository: yangjiao0817/harbor-core
+    tag: v2.9.0-build.2141
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -511,8 +511,8 @@ core:
 
 jobservice:
   image:
-    repository: goharbor/harbor-jobservice
-    tag: dev
+    repository: yangjiao0817/harbor-jobservice
+    tag: v2.9.0-build.2141
   replicas: 1
   revisionHistoryLimit: 10
   # set the service account to be used, default if left empty
@@ -568,8 +568,8 @@ registry:
   automountServiceAccountToken: false
   registry:
     image:
-      repository: goharbor/registry-photon
-      tag: dev
+      repository: yangjiao0817/registry-photon
+      tag: v2.9.0-build.2141
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -577,8 +577,8 @@ registry:
     extraEnvVars: []
   controller:
     image:
-      repository: goharbor/harbor-registryctl
-      tag: dev
+      repository: yangjiao0817/harbor-registryctl
+      tag: v2.9.0-build.2141
 
     # resources:
     #  requests:
@@ -642,9 +642,9 @@ trivy:
   enabled: true
   image:
     # repository the repository for Trivy adapter image
-    repository: goharbor/trivy-adapter-photon
+    repository: yangjiao0817/trivy-adapter-photon
     # tag the tag for Trivy adapter image
-    tag: dev
+    tag: v2.9.0-build.2141
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -729,8 +729,8 @@ database:
     # mount the service account token
     automountServiceAccountToken: false
     image:
-      repository: goharbor/harbor-db
-      tag: dev
+      repository: yangjiao0817/harbor-db
+      tag: v2.9.0-build.2141
     # The initial superuser password for internal database
     password: "changeit"
     # The size limit for Shared memory, pgSQL use it for shared_buffer
@@ -802,8 +802,8 @@ redis:
     # mount the service account token
     automountServiceAccountToken: false
     image:
-      repository: goharbor/redis-photon
-      tag: dev
+      repository: yangjiao0817/redis-photon
+      tag: v2.9.0-build.2141
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -852,8 +852,8 @@ exporter:
   # mount the service account token
   automountServiceAccountToken: false
   image:
-    repository: goharbor/harbor-exporter
-    tag: dev
+    repository: yangjiao0817/harbor-exporter
+    tag: v2.9.0-build.2141
   nodeSelector: {}
   tolerations: []
   affinity: {}
