fix: bump harbor v2.8.4 fc
Signed-off-by: Shengwen Yu <yshengwen@vmware.com>

--- a/values.yaml
+++ b/values.yaml
@@ -399,8 +399,8 @@ enableMigrateHelmHook: false
 # If service exposed via "ingress", the Nginx will not be used
 nginx:
   image:
-    repository: goharbor/nginx-photon
-    tag: v2.8.3
+    repository: yangjiao0817/nginx-photon
+    tag: v2.8.4
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -421,8 +421,8 @@ nginx:
 
 portal:
   image:
-    repository: goharbor/harbor-portal
-    tag: v2.8.3
+    repository: yangjiao0817/harbor-portal
+    tag: v2.8.4
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -443,8 +443,8 @@ portal:
 
 core:
   image:
-    repository: goharbor/harbor-core
-    tag: v2.8.3
+    repository: yangjiao0817/harbor-core
+    tag: v2.8.4
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -496,8 +496,8 @@ core:
 
 jobservice:
   image:
-    repository: goharbor/harbor-jobservice
-    tag: v2.8.3
+    repository: yangjiao0817/harbor-jobservice
+    tag: v2.8.4
   replicas: 1
   revisionHistoryLimit: 10
   # set the service account to be used, default if left empty
@@ -544,16 +544,16 @@ registry:
   automountServiceAccountToken: false
   registry:
     image:
-      repository: goharbor/registry-photon
-      tag: v2.8.3
+      repository: yangjiao0817/registry-photon
+      tag: v2.8.4
     # resources:
     #  requests:
     #    memory: 256Mi
     #    cpu: 100m
   controller:
     image:
-      repository: goharbor/harbor-registryctl
-      tag: v2.8.3
+      repository: yangjiao0817/harbor-registryctl
+      tag: v2.8.4
 
     # resources:
     #  requests:
@@ -608,9 +608,9 @@ trivy:
   enabled: true
   image:
     # repository the repository for Trivy adapter image
-    repository: goharbor/trivy-adapter-photon
+    repository: yangjiao0817/trivy-adapter-photon
     # tag the tag for Trivy adapter image
-    tag: v2.8.3
+    tag: v2.8.4
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -684,8 +684,8 @@ notary:
     # mount the service account token
     automountServiceAccountToken: false
     image:
-      repository: goharbor/notary-server-photon
-      tag: v2.8.3
+      repository: yangjiao0817/notary-server-photon
+      tag: v2.8.4
     replicas: 1
     # resources:
     #  requests:
@@ -706,8 +706,8 @@ notary:
     # mount the service account token
     automountServiceAccountToken: false
     image:
-      repository: goharbor/notary-signer-photon
-      tag: v2.8.3
+      repository: yangjiao0817/notary-signer-photon
+      tag: v2.8.4
     replicas: 1
     # resources:
     #  requests:
@@ -738,8 +738,8 @@ database:
     # mount the service account token
     automountServiceAccountToken: false
     image:
-      repository: goharbor/harbor-db
-      tag: v2.8.3
+      repository: yangjiao0817/harbor-db
+      tag: v2.8.4
     # The initial superuser password for internal database
     password: "changeit"
     # The size limit for Shared memory, pgSQL use it for shared_buffer
@@ -810,8 +810,8 @@ redis:
     # mount the service account token
     automountServiceAccountToken: false
     image:
-      repository: goharbor/redis-photon
-      tag: v2.8.3
+      repository: yangjiao0817/redis-photon
+      tag: v2.8.4
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -868,8 +868,8 @@ exporter:
   # mount the service account token
   automountServiceAccountToken: false
   image:
-    repository: goharbor/harbor-exporter
-    tag: v2.8.3
+    repository: yangjiao0817/harbor-exporter
+    tag: v2.8.4
   nodeSelector: {}
   tolerations: []
   affinity: {}
