--- a/values.yaml
+++ b/values.yaml
@@ -379,7 +379,7 @@ enableMigrateHelmHook: false
 nginx:
   image:
     repository: goharbor/nginx-photon
-    tag: dev
+    tag: v2.10.0-fc
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -410,7 +410,7 @@ nginx:
 portal:
   image:
     repository: goharbor/harbor-portal
-    tag: dev
+    tag: v2.10.0-fc
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -441,7 +441,7 @@ portal:
 core:
   image:
     repository: goharbor/harbor-core
-    tag: dev
+    tag: v2.10.0-fc
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -520,7 +520,7 @@ core:
 jobservice:
   image:
     repository: goharbor/harbor-jobservice
-    tag: dev
+    tag: v2.10.0-fc
   replicas: 1
   revisionHistoryLimit: 10
   # set the service account to be used, default if left empty
@@ -581,7 +581,7 @@ registry:
   registry:
     image:
       repository: goharbor/registry-photon
-      tag: dev
+      tag: v2.10.0-fc
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -590,7 +590,7 @@ registry:
   controller:
     image:
       repository: goharbor/harbor-registryctl
-      tag: dev
+      tag: v2.10.0-fc
 
     # resources:
     #  requests:
@@ -660,7 +660,7 @@ trivy:
     # repository the repository for Trivy adapter image
     repository: goharbor/trivy-adapter-photon
     # tag the tag for Trivy adapter image
-    tag: dev
+    tag: v2.10.0-fc
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -746,7 +746,7 @@ database:
     automountServiceAccountToken: false
     image:
       repository: goharbor/harbor-db
-      tag: dev
+      tag: v2.10.0-fc
     # The initial superuser password for internal database
     password: "changeit"
     # The size limit for Shared memory, pgSQL use it for shared_buffer
@@ -819,7 +819,7 @@ redis:
     automountServiceAccountToken: false
     image:
       repository: goharbor/redis-photon
-      tag: dev
+      tag: v2.10.0-fc
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -883,7 +883,7 @@ exporter:
   automountServiceAccountToken: false
   image:
     repository: goharbor/harbor-exporter
-    tag: dev
+    tag: v2.10.0-fc
   nodeSelector: {}
   tolerations: []
   affinity: {}
