--- a/values.yaml
+++ b/values.yaml
@@ -381,7 +381,7 @@ enableMigrateHelmHook: false
 nginx:
   image:
     repository: goharbor/nginx-photon
-    tag: dev
+    tag: v2.10.0-rc1
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -412,7 +412,7 @@ nginx:
 portal:
   image:
     repository: goharbor/harbor-portal
-    tag: dev
+    tag: v2.10.0-rc1
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -443,7 +443,7 @@ portal:
 core:
   image:
     repository: goharbor/harbor-core
-    tag: dev
+    tag: v2.10.0-rc1
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -522,7 +522,7 @@ core:
 jobservice:
   image:
     repository: goharbor/harbor-jobservice
-    tag: dev
+    tag: v2.10.0-rc1
   replicas: 1
   revisionHistoryLimit: 10
   # set the service account to be used, default if left empty
@@ -583,7 +583,7 @@ registry:
   registry:
     image:
       repository: goharbor/registry-photon
-      tag: dev
+      tag: v2.10.0-rc1
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -592,7 +592,7 @@ registry:
   controller:
     image:
       repository: goharbor/harbor-registryctl
-      tag: dev
+      tag: v2.10.0-rc1
 
     # resources:
     #  requests:
@@ -662,7 +662,7 @@ trivy:
     # repository the repository for Trivy adapter image
     repository: goharbor/trivy-adapter-photon
     # tag the tag for Trivy adapter image
-    tag: dev
+    tag: v2.10.0-rc1
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -748,7 +748,7 @@ database:
     automountServiceAccountToken: false
     image:
       repository: goharbor/harbor-db
-      tag: dev
+      tag: v2.10.0-rc1
     # The initial superuser password for internal database
     password: "changeit"
     # The size limit for Shared memory, pgSQL use it for shared_buffer
@@ -821,7 +821,7 @@ redis:
     automountServiceAccountToken: false
     image:
       repository: goharbor/redis-photon
-      tag: dev
+      tag: v2.10.0-rc1
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -885,7 +885,7 @@ exporter:
   automountServiceAccountToken: false
   image:
     repository: goharbor/harbor-exporter
-    tag: dev
+    tag: v2.10.0-rc1
   nodeSelector: {}
   tolerations: []
   affinity: {}
