--- a/values.yaml
+++ b/values.yaml
@@ -483,7 +483,7 @@ containerSecurityContext:
 nginx:
   image:
     repository: goharbor/nginx-photon
-    tag: dev
+    tag: v2.10.1
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -514,7 +514,7 @@ nginx:
 portal:
   image:
     repository: goharbor/harbor-portal
-    tag: dev
+    tag: v2.10.1
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -547,7 +547,7 @@ portal:
 core:
   image:
     repository: goharbor/harbor-core
-    tag: dev
+    tag: v2.10.1
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -627,7 +627,7 @@ core:
 jobservice:
   image:
     repository: goharbor/harbor-jobservice
-    tag: dev
+    tag: v2.10.1
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -683,7 +683,7 @@ registry:
   registry:
     image:
       repository: goharbor/registry-photon
-      tag: dev
+      tag: v2.10.1
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -692,7 +692,7 @@ registry:
   controller:
     image:
       repository: goharbor/harbor-registryctl
-      tag: dev
+      tag: v2.10.1
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -766,7 +766,7 @@ trivy:
     # repository the repository for Trivy adapter image
     repository: goharbor/trivy-adapter-photon
     # tag the tag for Trivy adapter image
-    tag: dev
+    tag: v2.10.1
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # mount the service account token
@@ -852,7 +852,7 @@ database:
   internal:
     image:
       repository: goharbor/harbor-db
-      tag: dev
+      tag: v2.10.1
     # set the service account to be used, default if left empty
     serviceAccountName: ""
     # mount the service account token
@@ -925,7 +925,7 @@ redis:
   internal:
     image:
       repository: goharbor/redis-photon
-      tag: dev
+      tag: v2.10.1
     # set the service account to be used, default if left empty
     serviceAccountName: ""
     # mount the service account token
@@ -980,7 +980,7 @@ redis:
 exporter:
   image:
     repository: goharbor/harbor-exporter
-    tag: dev
+    tag: v2.10.1
   serviceAccountName: ""
   # mount the service account token
   automountServiceAccountToken: false
