fix: debug github.event
Signed-off-by: Shengwen Yu <yshengwen@vmware.com>

--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -28,6 +28,7 @@ jobs:
           helm push ${{ env.PACKAGE_PATH }} oci://ghcr.io/${{ github.actor }}
       - name: Upload to chart repository 
         run: |
+          echo "${{ toJson(github.event) }}
           git config --global user.email "${{ github.event.actor.login }}@users.noreply.github.com"
           git config --global user.name "${{ github.event.repository.name }} CI"
           git checkout chart-repository
