fix: add pwd, ls
Signed-off-by: Shengwen Yu <yshengwen@vmware.com>

--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -29,6 +29,8 @@ jobs:
       - name: Upload to chart repository 
         run: |
           echo "${{ toJson(github.event) }}
+          pwd
+          ls
           git config --global user.email "${{ github.event.actor.login }}@users.noreply.github.com"
           git config --global user.name "${{ github.event.repository.name }} CI"
           git checkout chart-repository
