fix: add string quote
Signed-off-by: Shengwen Yu <yshengwen@vmware.com>

--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -28,7 +28,7 @@ jobs:
           helm push ${{ env.PACKAGE_PATH }} oci://ghcr.io/${{ github.actor }}
       - name: Upload to chart repository 
         run: |
-          echo ${{ toJson(github.event) }}
+          echo "${{ toJson(github.event) }}"
           pwd
           ls
           git config --global user.email "${{ github.event.actor.login }}@users.noreply.github.com"
