fix: add "git status && git diff" debug info
Signed-off-by: Shengwen Yu <yshengwen@vmware.com>

--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -40,6 +40,8 @@ jobs:
           helm repo index --merge ../harbor-helm/index.yaml .
           mv ./* ../harbor-helm
           cd ../harbor-helm
+          git status
+          git diff 
           git add .
           git commit -s "feat: Upload Harbor ${{ github.event.release.tag_name }} to chart repository"
           git push origin chart-repository
