--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -28,11 +28,10 @@ jobs:
           helm push ${{ env.PACKAGE_PATH }} oci://ghcr.io/${{ github.actor }}
       - name: Upload to chart repository 
         run: |
-          echo "${{ toJson(github.event) }}"
-          pwd
-          ls
+          set -e
           git config --global user.email "${{ github.event.actor.login }}@users.noreply.github.com"
           git config --global user.name "${{ github.event.repository.name }} CI"
+          git fetch origin chart-repository
           git checkout chart-repository
           mkdir -p ../helm-temp
           cd ../helm-temp
@@ -40,10 +39,10 @@ jobs:
           helm repo index --merge ../harbor-helm/index.yaml .
           mv ./* ../harbor-helm
           cd ../harbor-helm
-          git status
-          git diff 
           git add .
-          git commit -s "feat: Upload Harbor ${{ github.event.release.tag_name }} to chart repository"
+          git status
+          git diff | cat
+          git commit -s -m "feat: Upload Harbor ${{ github.event.release.tag_name }} to chart repository"
           git push origin chart-repository
       - name: Release
         uses: softprops/action-gh-release@v1
